--- a/.github/workflows/jupyterlite.yml
+++ b/.github/workflows/jupyterlite.yml
@@ -1,27 +1,46 @@
-name: Build JupyterLite
+name: Build and Publish JupyterLite to GitHub Pages
+
 on:
   push:
     branches: [ main ]
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: jupyterlite/action@v1
+
+      - uses: actions/setup-python@v5
         with:
-          contents: .
-      - uses: actions/upload-pages-artifact@v3
+          python-version: '3.11'
+
+      - name: Install JupyterLite
+        run: |
+          python -m pip install --upgrade pip
+          pip install "jupyterlite[all]"
+
+      # Adjust --contents if your notebooks live elsewhere
+      - name: Build site
+        run: jupyter lite build --contents ./content --output-dir ./_output
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ./_output
+
   deploy:
     needs: build
-    permissions:
-      pages: write
-      id-token: write
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
     steps:
-      - id: deployment
+      - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v4
