--- a/.github/workflows/jupyterlite.yml
+++ b/.github/workflows/jupyterlite.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           python-version: '3.11'
       # NEW: install a kernel package so the Launcher shows "Python (Pyodide)"
-      - name: Install JupyterLite + Pyodide kernel
+      - name: Install JupyterLite + Pyodide kernel (+ contents indexer)
         run: |
           python -m pip install --upgrade pip
-          pip install jupyterlite-core jupyterlite-pyodide-kernel
+          pip install jupyterlite-core[contents] jupyterlite-pyodide-kernel
       - name: Build site
         run: jupyter lite build --contents ./content --output-dir ./_output
       - name: Upload Pages artifact
