--- a/.github/workflows/jupyterlite.yml
+++ b/.github/workflows/jupyterlite.yml
@@ -1,4 +1,5 @@
 name: Build and Publish JupyterLite to GitHub Pages
+
 on:
   push:
     branches: [ main ]
@@ -17,13 +18,23 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      # NEW: install a kernel package so the Launcher shows "Python (Pyodide)"
-      - name: Install JupyterLite + Pyodide kernel (+ contents indexer)
+
+      # 1) Install JupyterLite core (with contents indexer) + Pyodide kernel
+      # Pin to the same 0.6.x line to avoid runtime mismatches.
+      - name: Install JupyterLite + Pyodide kernel (pinned)
         run: |
           python -m pip install --upgrade pip
-          pip install jupyterlite-core[contents] jupyterlite-pyodide-kernel
-      - name: Build site
-        run: jupyter lite build --contents ./content --output-dir ./_output
+          pip install "jupyterlite-core[contents]==0.6.*" "jupyterlite-pyodide-kernel==0.6.*"
+
+      # 2) Build the site and SELF-HOST Pyodide assets (no CDN at runtime)
+      # Using a Pyodide release tarball avoids corporate CDN blocks.
+      - name: Build site (bundle Pyodide)
+        run: |
+          jupyter lite build \
+            --contents ./content \
+            --output-dir ./_output \
+            --pyodide https://github.com/pyodide/pyodide/releases/download/0.27.1/pyodide-0.27.1.tar.bz2
+
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
